Alright in build everything works flawless. Only some gun jitter in editor but that's alright. IF NEW THINGS HAPPEN ROLL BACK TO THIS BUILD!

--- a/DevBuilds/GraduationTemp_Data/boot.config
+++ b/DevBuilds/GraduationTemp_Data/boot.config
@@ -1,5 +1,5 @@
 player-connection-mode=Listen
-player-connection-guid=1805085944
+player-connection-guid=3016692485
 player-connection-debug=0
 player-connection-project-name=GraduationTemp
 player-connection-wait-timeout=-1
@@ -9,5 +9,5 @@ gfx-enable-gfx-jobs=
 gfx-enable-native-gfx-jobs=
 wait-for-native-debugger=0
 vr-enabled=1
-vr-device-list=OpenVR,Oculus
+vr-device-list=OpenVR
 hdr-display-enabled=0
