--- a/DevBuilds/GraduationTemp_Data/boot.config
+++ b/DevBuilds/GraduationTemp_Data/boot.config
@@ -4,6 +4,7 @@ player-connection-debug=1
 player-connection-project-name=GraduationTemp
 player-connection-wait-timeout=-1
 player-connection-ip=192.168.1.20
+profiler-enable=1
 gfx-enable-gfx-jobs=
 gfx-enable-native-gfx-jobs=
 wait-for-native-debugger=0
